--- a/website/src/components/gallery/ShowcaseTemplateSearch/styles.module.css
+++ b/website/src/components/gallery/ShowcaseTemplateSearch/styles.module.css
@@ -51,11 +51,11 @@
 }
 
 .heroAccent {
-  color: #818cf8;
+  color: #7683ec;
 }
 
 [data-theme="dark"] .heroAccent {
-  color: #818cf8;
+  color: #7683ec;
 }
 
 .heroDescription {
